--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.3.1",
+    "bootstrap": "^5.1.3",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.1.0",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.22.5",
+    "swiper": "^7.4.1"
   },
   "devDependencies": {
     "eslint": "8.5.0",
